fix: profile__title set line-height, letter-spacing must be default

--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -2,18 +2,17 @@
   grid-area: title;
   margin: 0;
   padding: 0;
-  letter-spacing: 2px;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
-
+  line-height: 48px;
 }
 
 
 
 @media screen and (max-width: 424px){
   .profile__title {
-    letter-spacing: 1px;
     font-size: 27px;
+    line-height: 33px;
   }
 }
